# ros2_canopen

./: README.md
canopen_fake_slaves/include/canopen_fake_slaves/: cia402_slave.hpp
canopen_robot_control_example/config/robot_control/: lineaxis.dcf
canopen_tests/: CMakeLists.txt  README.md  package.xml
canopen_tests/config/cia402/: cia402_slave_n5.eds  cia402_slave_n6.eds  master.dcf
canopen_tests/config/eirabot_control/: bus.yml  cia402_slave_n5.eds  cia402_slave_n6.eds  map_server_params.yaml  master.dcf  nav2_params.yaml  ros2_controllers.yaml
canopen_tests/config/robot_control/: bus.yml  cia402_slave_n5.eds  cia402_slave_n6.eds  master.dcf
canopen_tests/launch/: cia402_setup.launch.py  eirabot.launch.py  eirabot_sim.launch.py  robot_control_setup.launch.py
canopen_tests/launch/eirabot/: eirabot.launch.py  eirabot_sim.launch.py  map_server.launch.py  navigation_launch.py
canopen_tests/maps/: cubicle_map.pgm  cubicle_map.yaml  mezz_map.pgm  mezz_map.yaml  ten_metre_map.pgm  ten_metre_map.yaml
canopen_tests/meshes/eirabot/: base_link.stl  left_wheel_1.stl  right_wheel_1.stl
canopen_tests/scripts/: drift_correction_sim.py  drift_correction_test.py  odom_listener.py  static_transform_broadcaster.py  waypoint_follower.py
canopen_tests/urdf/eirabot_controller/: Eirabot.xacro  diffbot.materials.xacro  materials.xacro  robot_controller.macro.xacro  robot_controller.ros2_control.xacro  robot_controller.urdf.xacro
docs/: currentUnderstanding.puml
